# git-rs

./: 404.html  CNAME  Cargo.toml  README.md  git.catfile.txt  index.html
_next/data/I_2lQPOWxFjfU1NQp8oHC/: index.json
_next/data/I_2lQPOWxFjfU1NQp8oHC/docs/: plumbing-porcelain.json  what-is-git.json
_next/data/smYAxbqXZhd4zBovTlOSU/docs/: create-repo.json  resources.json  tagging.json  testing.json
_next/static/I_2lQPOWxFjfU1NQp8oHC/: _ssgManifest.js
_next/static/chunks/: 673-6477190af46fabca.js
_next/static/chunks/pages/: _app-bcc69aa85b709d2c.js
_next/static/smYAxbqXZhd4zBovTlOSU/: _buildManifest.js
docs/: aliases.html  create-repo.html  history.html  index.html  objects.html  packfiles.html  plumbing-porcelain.html  record-changes.html  refs.html  refspec.html  remotes.html  resources.html  tagging.html  testing.html  transfer-protocols.html  undoing.html  version-control.html  view-history.html  what-is-git.html
docs/docs/: aliases.html  create-repo.html  history.html  objects.html  refspec.html  remotes.html  resources.html  tagging.html  transfer-protocols.html  undoing.html  what-is-git.html
src/: main.rs
src/cli/: add.rs  cat_file.rs  checkout.rs  commit.rs  hash_object.rs  init.rs  log.rs  merge.rs  mod.rs  rebase.rs  rev_parse.rs  rm.rs  show_ref.rs  show_tree.rs  tag.rs
src/crypto/: mod.rs
src/object/: blob.rs  commit.rs  findable.rs  git_object.rs  mail_map.rs  mod.rs  mode.rs  object.rs  refs.rs  serializable.rs  tag.rs  tree.rs
src/repo/: mod.rs
tests/: cat_file.rs  hash_object.rs  init.rs  main.rs
(+22 files in other folders)
