[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
flate2 = "1.0.23"
indexmap = "1.8.1"
regex = "1.5"
rust-ini = "0.18"
sha-1 = "0.10.0"
hex-literal = "0.3.4"