[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
flate2 = "1.0.23"
indexmap = "1.8.1"
regex = "1.5"
rust-ini = "0.18"
sha-1 = "0.10.0"
hex-literal = "0.3.4"
hex = "0.4.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempdir = "0.3.7"